verif/test/deca/syntax/invalid/missing-semi-verif.res
src/test/deca/syntax/invalid/missing-semi.deca:9:4: missing ';' at 'x'
